--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col">
       <p class="subtitulo">¿Qué es el Jazz?</p>
-      <p>El jazz es un género musical que surgió a finales del siglo XIX en los Estados Unidos y que inmediatamente se extendió por todo el mundo a lo largo del siglo XX. Entre sus rasgos salientes está su improvisación y el ritmo muy marcado que él presenta. Esta corriente musical, especialmente identificada con la raza negra, ha tenido una asimilación constante de otras tendencias musicales, incluso las más extrañas, y también se ha mezclado con otros géneros generando otras corrientes musicales muy populares como el rock and roll y que después evolucionó de forma independiente Al jazz. </br></br></p>
+      <p>El jazz es un género musical que surgió a finales del siglo XIX en los Estados Unidos y que inmediatamente se extendió por todo el mundo a lo largo del siglo XX. Entre sus rasgos salientes está su improvisación y el ritmo muy marcado que él presenta. Esta corriente musical, especialmente identificada con la raza negra, ha tenido una asimilación constante de otras tendencias musicales, incluso las más extrañas, y también se ha mezclado con otros géneros generando otras corrientes musicales muy populares como el rock and roll y que después evolucionó de forma independiente Al jazz.</p>
       <p class="definicion">Para más información dirígase a <a href="https://conceptodefinicion.de/jazz/" target="_blank">acá</a></p>
     </div>
     <div class="col">
@@ -30,6 +30,114 @@
         <li>Miles Davis</li>
         <li>The Blackbyrds</li>
       </ul></p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-5">
+      <div class="box-img-roy">
+      <img src="roy-ayers.jpg" class="card-img-roy" alt="Roy-Ayers">
+      </div>
+    </div>
+    <div class="col">
+      <div class="row">
+        <div class="col-10">
+          <p class="name">Roy Ayers</p>
+        </div>
+        <div class="col-2">
+          <p class="download">Download</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-10">
+          <p class="name">The father of Jazz</p>
+        </div>
+        <div class="col-2">
+          <p class="download">See more</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <p class="b-Home">Home</p>
+        </div>
+        <div class="col-2">
+          <p class="b-Resume">Resume</p>
+        </div>
+        <div class="col-2">
+          <p class="b-Portfolio">Portfolio</p>
+        </div>
+        <div class="col-2">
+          <p class="b-Contacts">Contacts</p>
+        </div>
+        <div class="col-2">
+          <p  class="b-Feedback">Feedback</p>
+        </div>
+        <div class="col-2">
+          <p class="b-Blog">Blog</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-8">
+        <div class="row">
+          <p class="gridus">Gridus</p>
+        </div>
+        <div class="row">
+          <p class="cv">Perfect for CV</p>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <p class="modern">modern</p>
+          </div>
+          <div class="col-4">
+            <p class="simple">simple</p>
+          </div>
+          <div class="col-4">
+            <p class="responsive">responsive</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="row">
+          <p class="pinfo">Personal info</p>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="row">
+              <p class="nam">Name</p>
+            </div>
+            <div class="row">
+              <p class="bd">Birthday</p>
+            </div>
+            <div class="row">
+              <p class="addr">Address</p>
+            </div>
+            <div class="row">
+              <p class="phone">Phone</p>
+            </div>
+            <div class="row">
+              <p class="email">E-mail</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="row">
+              <p class="r-nam">Roy Ayers</p>
+            </div>
+            <div class="row">
+              <p class="r-bd">03/04/1960</p>
+            </div>
+            <div class="row">
+              <p class="r-addr">Cra 11 # 22 -21</p>
+            </div>
+            <div class="row">
+              <p class="r-phone">1 857 372 71</p>
+            </div>
+            <div class="row">
+              <p class="r-email">roy.ayers@gmail.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
